[mod] readme.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "listaTel-backend",
+  "name": "lista-tel-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
